# watchmen

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  agent.py  analyze.py  brief.py  cache.py  cli.py  config.py  corpus.py  corpus_filters.py  curate.py  daemon.py  hooks_setup.py  launchd_setup.py  metrics.py  model_prices.py  onboard.py  paths.py  plugin_setup.py  pyproject.toml  server.py  state.py  tools_lib.py  transcript.py  view.py
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  test.yml
adapters/: __init__.py  claude_code.py  codex.py  pi.py
docs/design/: visual-tools.md
hooks/: watchmen_brief.sh
plugin-codex/: hooks.json
plugin-codex/.codex-plugin/: plugin.json
plugin-codex/hooks/: hooks.json
plugin-codex/skills/brief/: SKILL.md
plugin/.claude-plugin/: plugin.json
plugin/skills/brief/: SKILL.md
scripts/: seed_mock_corpus.py
src/watchmen/: __init__.py  agent.py  analyze.py  banner.py  cli.py  compare.py  config.py  corpus.py  corpus_filters.py  curate.py  daemon.py  goals.py  harness.py  hook_server.py  hooks_setup.py  launchd_setup.py  metrics.py  model_prices.py  onboard.py  paths.py  plugin_setup.py  providers.py  prune.py  route.py  route_improve.py  route_rewrite.py  schtasks_setup.py  server.py  service.py  skill_install.py  skillmesh.py  state.py  subagents.py  systemd_setup.py  tools_lib.py  transcript.py  ui.py  util.py  view.py
src/watchmen/adapters/: __init__.py  _shared.py  claude_code.py  codex.py  opencode.py  pi.py
src/watchmen/commands/: __init__.py  compare.py  control.py  distill.py  goals.py  insights.py  inspect.py  install.py  lifecycle.py  pipeline.py  route.py  settings_menu.py  skills.py  subagents.py
src/watchmen/credentials/: __init__.py  claude_code.py  codex.py
src/watchmen/hooks/: watchmen_observe.ps1  watchmen_observe.sh
src/watchmen/viewer/: actions.py  diagnostics.py  homepage.py  server.py
src/watchmen/viewer/templates/: _action_banner.html  action_run.html  base.html  card.html  dashboard.html  diff.html  doctor.html  file.html  insights.html  metrics.html  metrics_all.html  project.html  project_runs.html  prune.html  runs.html  settings.html  skill.html  thesis.html  thesis_day.html
tests/: conftest.py  smoke.py  test_adapter_claude_code.py  test_adapter_opencode.py  test_adapter_pi.py  test_adapter_skill_attribution.py  test_agent.py  test_auto_install.py  test_cli.py  test_codex_subagent_telemetry.py  test_compare.py  test_corpus.py  test_curate_core.py  test_failure_classification.py  test_goals.py  test_install_cmd.py  test_metrics.py  test_model_prices.py  test_oauth.py  test_paths.py  test_providers.py  test_route.py  test_route_improve.py  test_skill_install.py  test_skillmesh.py  test_smoke.py  test_viewer_auto_install_toggle.py  test_viewer_install.py
tests/fixtures/: codex_rollout.jsonl  opencode_session.json  pi_session.jsonl  pi_session_compacted.jsonl
viewer/: server.py
viewer/templates/: base.html  dashboard.html  diff.html  metrics.html  metrics_all.html  project.html  project_runs.html  skill.html  thesis.html  thesis_day.html
