[project]
name = "watchmen"
version = "0.4.1"
description = "Local Claude Code session intelligence — observe, analyze, and generate skills + CLAUDE.md per project, autonomously"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "httpx>=0.27",
    "bleach>=6.1",
    "jinja2>=3.1",
    "markdown>=3.7",
    "pygments>=2.18",
    "rich>=13.7",
]

[project.scripts]
watchmen = "watchmen.cli:main"

[project.urls]
Repository = "https://github.com/firstbatchxyz/watchmen"
Issues = "https://github.com/firstbatchxyz/watchmen/issues"
Changelog = "https://github.com/firstbatchxyz/watchmen/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Single Python package lives at src/watchmen/. Hatch picks up everything
# under it (Python + the shell hooks at src/watchmen/hooks/ + the viewer
# HTML templates). CHANGELOG.md is force-included so the CLI's "what's new"
# block can render it from the installed package, not just the source tree.
packages = ["src/watchmen"]

[tool.hatch.build.targets.wheel.force-include]
"CHANGELOG.md" = "watchmen/CHANGELOG.md"

[tool.hatch.build.targets.sdist]
include = [
    "src/watchmen",
    "plugin",
    "tests",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
    "pyproject.toml",
]

# ─── Linting / formatting ─────────────────────────────────────────────────
[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
# Minimal starter set — catches real bugs without flooding the repo with
# cosmetic changes:
#   F    — pyflakes (undefined names, unused imports/variables, real bugs)
#   E9   — syntax errors and IO errors
# Stylistic + modernization rules are deliberately off for now; Phase 3
# will ratchet up (add B for bugbear, UP for pyupgrade, I for isort) and
# pay the import-sort + datetime-utc cleanup cost in a focused PR.
select = ["F", "E9"]

[tool.ruff.lint.per-file-ignores]
"src/watchmen/__init__.py" = ["F401"]   # re-exports for public API
